# privacy-preserving-ml-platform

./: .env  .env.dev  .env.test  .gitignore  Dockerfile  LICENSE  README.md  build.sh  create_scope.sh  deploy.sh  docker-compose.yml  encrypted_return_calculation.py  helib_demo.cpp  logistic_regression.py  main.py  pyfhel_demo.py  pyproject.toml  requirements.txt  run.sh  sckit_learn.py  seal_demo.cpp  setup_xolo.sh  start  xolo.yml
.github/workflows/: run_test.yml
calpulli/: server.py
calpulli/config/: __init__.py
calpulli/controllers/: __init__.py  algorithms.py  calpulli.py  datasets.py  numeric_parameters.py  results.py  string_parameters.py  tasks.py  users_profile.py
calpulli/dtos/: __init__.py
calpulli/errors/: __init__.py
calpulli/helpers/: __init__.py
calpulli/log/: __init__.py
calpulli/middleware/: __init__.py
calpulli/models/: __init__.py
calpulli/repositories/: __init__.py
calpulli/services/: __init__.py
client/: package-lock.json
data/: magnificent7_dataset.csv  main.py
demo/basic/: tenseal_demo.py
demo/other/: tenseal_dataset.py
deploy/env/: compose.env
ppml/: server.py
ppml/config/: __init__.py
ppml/controllers/: __init__.py  ppml.py  (+6 more)
ppml_server/: requirements.txt
ppmlp/: server.py
preprocess_server/: .env  loader.py  requirements.txt  storage.py
test/: .gitignore  cifrado.py  cifrado_mejorado.py  estudiantes.csv  forestfires.csv  ppml.py  pyfhel_rl.py  requirements.txt
tests/: conftest.py  pytest.ini  test_algorithms.py  test_algorithms_controller.py  test_datasets_controller.py  test_numeric_parameter_value.py  test_numeric_parameter_value_repository.py  test_numeric_parameters_controller.py  test_parameters.py  test_results_controller.py  test_results_service.py  test_string_parameter_value.py  test_string_parameters_controller.py  test_tasks.py  test_tasks_controller.py  test_tasks_service.py  test_users_profiles_controller.py
(+37 files in other folders)
